<resources>
    <string name="app_name">WeightLifty</string>
    <string name="view_tables">View Tables</string>
    <string name="insert_dummy_data">Insert Dummy Data</string>
    <string name="begin_workout">Begin Workout</string>
    <string name="plan_workout">Plan Workout</string>
    <string name="search_bar_goes_here">Search Bar Goes Here</string>
    <string name="delete_dummy_data">Delete Calendar</string>
    <string name="developer_options">↓↓Developer Options↓↓</string>
    <string name="insert_dummy_eventtype_data">Insert EventType</string>
    <string name="insert_dummy_calendar_data">Insert calendar</string>
    <string name="sample_workout_name">Sample Workout Name</string>
    <string name="set">Set:</string>
    <string name="rep">Rep:</string>
    <string name="sample_rep">77</string>
    <string name="sample_set">66</string>
    <string name="insert_dummy_event">Insert event values</string>
    <string name="delete_event">Delete Event</string>
    <string name="hint_text_weight">Weight</string>
    <string name="for_calendar">For Calendar</string>
    <string name="for_event_table">For Event Table</string>
    <string name="for_event_type_table">For Event Type Table</string>
    <string name="insert_today_calendar">Insert today Calendar</string>
    <string name="delete_all_events">Delete All Events</string>
    <string name="add_event">Add Event</string>
    <string name="update_event">Update Event</string>
    <string name="insert_random_values">Insert A Random Event</string>
    <string name="insert_type_event">Insert Event Type</string>
    <string name="search_events">Search Events</string>
    <string name="hint_search_events">Search Events...</string>
    <string name="hint_text_example">Hint Text</string>
    <string name="suggestion_provider_authority">suggestion_provider_authority</string>
    <string name="input_event">Input Event</string>
    <string name="launch_searchactivity">Launch SearchActivity</string>
    <string name="reset_fts_table">Delete EventType Table</string>
    <string name="test_eventtype_db">Test EventType DB</string>
    <string name="number">No.</string>
    <string name="nulltext">null</string>
    <string name="number_text">No.</string>
    <string name="hint_text">Hint Text</string>
    <string name="cancel">Cancel</string>
    <string name="weight">Weight:</string>
    <string name="ui">UI</string>
    <string name="settings">Settings</string>
    <string name="unit">Unit</string>
    <string name="unit_hint_text">Choose preferred unit</string>
    <string name="pref_unit">pref_unit</string>
    <string name="unit_metric">unit_metric</string>
    <string name="unit_imperial">unit_imperial</string>
    <string name="kg">(kg)</string>
    <string name="lb">(lb)</string>
    <string name="hint_text_progress">Creating your workout database:</string>
    <string name="_100">100</string>
    <string name="percent_symbol">%</string>
    <string name="about">About</string>
    <string name="about_content_text">
        \n \n
        Thank you a lot for using this app! \n \n \n I am a university student in Tokyo.
        I know this isn\'t
        the prettiest app out there — however, I\'m hoping to improve this app into something
        everybody can use stress-free, everyday. \n \n \n
        You are one of the first users - amazing! Please come check out this app from time to time -
        This will definitely be updated for improvements. \n \n \n
    </string>
    <string name="about_credits_text">
        Credits:
        The awesome WeightLifty icon was created by: freepik from http://www.flaticon.com/authors/freepik.
        http://www.flaticon.com is an awesome website where you can download all kinds of icons for free. \n \n
    </string>
    <string name="Author_text">Author: Etchee. ( https://github.com/Etchee )</string>
    <string name="delete_workouts_of_today">Delete workouts of today</string>
    <string name="delete_workout_database_will_be_restored_after_re_launch">Delete Workout Database (Will be restored after re-launch)</string>
    <string name="delete_workout_database">Delete Workout Database</string>
</resources>
