<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".Activity.MainActivity"
    >
    <item
        android:title="@string/insert_random_values"
        android:id="@+id/menu_insert_event"
        app:showAsAction="never" />
    <item android:title="@string/delete_all_events"
        android:id="@+id/menu_delete_all_events"
        app:showAsAction="never" />
    <item android:title="@string/view_tables"
        android:id="@+id/menu_view_tables"
        app:showAsAction="never" />
    <item android:title="Decode Workout Resource"
        android:id="@+id/decode_workout_res"
        app:showAsAction="never" />
    <item android:title="@string/reset_fts_table"
        android:id="@+id/reset_FTS_table"
        app:showAsAction="never" />
    <item android:title="@string/settings"
        android:id="@+id/menu_settings"
        app:showAsAction="never"
        />
    <item android:title="@string/about"
        android:id="@+id/menu_about"
        app:showAsAction="never" />

</menu>