<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="etchee.com.weightlifty.MainActivity">

    <!--Button to begin workout-->
    <Button
        android:id="@+id/begin_workout_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignEnd="@+id/imageView"
        android:layout_alignLeft="@+id/imageView"
        android:layout_alignRight="@+id/imageView"
        android:layout_alignStart="@+id/imageView"
        android:layout_below="@+id/imageView"
        android:layout_marginTop="37dp"
        android:paddingBottom="20dp"
        android:paddingTop="20dp"
        android:text="@string/begin_workout" />

    <!--ImageView to hold the pretty icon for the app-->
    <ImageView
        android:id="@+id/imageView"
        android:layout_width="200dp"
        android:layout_height="150dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="39dp"
        app:srcCompat="@drawable/welcome_title" />

    <Button
        android:id="@+id/plan_workout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/begin_workout_button"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="48dp"
        android:text="@string/plan_workout" />


    <!--Horizontally scroll down below to make use of the dev options-->
    <GridView
        android:id="@+id/horizontalScrollView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <Button
                android:id="@+id/button_delete_dummy"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/delete_dummy_data"

                />

            <Button
                android:id="@+id/insert_dummy_calendar_data"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/insert_dummy_calendar_data" />


            <Button
                android:id="@+id/view_tables_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/view_tables" />

            <Button
                android:id="@+id/button_insert_dummy_eventType"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"

                android:text="@string/insert_dummy_eventtype_data" />

            <Button
                android:id="@+id/button_insert_dummy_event"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/insert_dummy_event" />
        </LinearLayout>

    </GridView>


</RelativeLayout>
