<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent" android:layout_height="match_parent">

    <TextView
        android:id="@+id/name_workout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="26dp"
        android:text="@string/sample_workout_name"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        android:textColor="@android:color/holo_blue_dark"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/item_text_rep"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/name_workout"
        android:layout_marginLeft="34dp"
        android:layout_marginStart="34dp"
        android:layout_toEndOf="@+id/name_workout"
        android:layout_toRightOf="@+id/name_workout"
        android:text="@string/rep"
        android:textColor="@android:color/darker_gray" />

    <TextView
        android:id="@+id/item_text_set"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/item_text_rep"
        android:layout_alignLeft="@+id/item_text_rep"
        android:layout_alignStart="@+id/item_text_rep"
        android:text="@string/set"
        android:textColor="@android:color/darker_gray" />

    <TextView
        android:id="@+id/item_count_rep"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/item_text_set"
        android:layout_marginLeft="17dp"
        android:layout_marginStart="17dp"
        android:layout_toEndOf="@+id/item_text_set"
        android:layout_toRightOf="@+id/item_text_set"
        android:text="@string/sample_rep"
        android:textColor="@android:color/darker_gray" />

    <TextView
        android:id="@+id/item_count_set"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/item_count_rep"
        android:layout_alignStart="@+id/item_count_rep"
        android:layout_alignTop="@+id/item_text_set"
        android:text="@string/sample_set"
        android:textColor="@android:color/darker_gray" />

</RelativeLayout>