<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent" android:layout_height="match_parent">
    <!--ImageView to hold the pretty icon for the app-->

    <ImageView
        android:id="@+id/main_logo_view"
        android:layout_width="@dimen/main_logo_width"
        android:layout_height="@dimen/main_logo_height"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="@dimen/main_logo_marginTop"
        android:src="@drawable/welcome_title" />

    <!--Button to begin workout-->
    <Button
        android:id="@+id/begin_workout_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/main_logo_view"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="@dimen/list_marginTop"
        android:paddingBottom="20dp"
        android:paddingRight="10dp"
        android:paddingTop="20dp"
        android:text="@string/begin_workout" />

    <TextView
        android:id="@+id/hint_update_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/begin_workout_button"
        android:layout_marginTop="@dimen/main_logo_marginTop"
        android:text="@string/hint_text_progress"
        android:layout_centerHorizontal="true"
        android:visibility="gone"
        />

    <TextView
        android:id="@+id/hint_number_update"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/_100"
        android:visibility="gone"
        android:layout_below="@id/hint_update_text"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="@dimen/main_logo_marginTop" />

    <TextView
        android:id="@+id/hint_text_update_percent"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"
        android:layout_alignTop="@+id/hint_number_update"
        android:layout_toEndOf="@+id/hint_number_update"
        android:layout_toRightOf="@+id/hint_number_update"
        android:text="@string/percent_symbol" />

</RelativeLayout>