<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content">

    <ImageView
        android:id="@+id/sample_image_deadlift"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:adjustViewBounds="true"
        android:src="@drawable/image_deadlift" />

    <EditText
        android:id="@+id/editText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/sample_image_deadlift"
        android:layout_marginLeft="17dp"
        android:layout_marginStart="17dp"
        android:layout_marginTop="15dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="@string/sample_workout_name" />

    <Button
        android:id="@+id/delete_workout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="14dp"
        android:text="@string/delete_event" />

    <NumberPicker
        android:id="@+id/set_numberPicker"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/delete_workout"
        android:layout_alignLeft="@+id/editText"
        android:layout_alignStart="@+id/editText"
        android:paddingTop="10dp" />

    <NumberPicker
        android:id="@+id/rep_numberPicker"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/set_numberPicker"
        android:paddingTop="10dp"
        android:layout_centerHorizontal="true" />

    <TextView
        android:id="@+id/hint_text_set"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/set"
        android:layout_below="@+id/editText"
        android:layout_alignLeft="@+id/editText"
        android:layout_alignStart="@+id/editText"
        android:layout_marginLeft="17dp"
        android:layout_marginStart="17dp" />

    <TextView
        android:id="@+id/hint_text_rep"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/rep"
        android:layout_below="@+id/editText"
        android:layout_centerHorizontal="true" />

</RelativeLayout>